--- a/HotelYRestaurantes/hotel.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/hotel.microservice/src/main/resources/application.properties
@@ -15,8 +15,8 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=never
 
-# (opcional) usar Problem Details (RFC 7807)
-#spring.mvc.problemdetails.enabled=true
+ (opcional) usar Problem Details (RFC 7807)
+spring.mvc.problemdetails.enabled=true
 
-#debug=true
-#logging.level.org.springframework.context.annotation=TRACE
+debug=true
+logging.level.org.springframework.context.annotation=TRACE
