--- a/HotelYRestaurantes/hotel.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/hotel.microservice/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.mvc.problemdetails.enabled=true
 
 debug=true
 logging.level.org.springframework.context.annotation=TRACE
+
+logging.level.com.hotel.microservice.facturacion=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
