add: hexagono de reviews de platillos

--- a/HotelYRestaurantes/reviews.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/reviews.microservice/src/main/resources/application.properties
@@ -20,4 +20,5 @@ server.error.include-stacktrace=never
 
 logging.level.org.springframework.web.reactive.function.client=DEBUG
 hotel.api.base-url=http://localhost:8082
+restaurante.api.base-url=http://localhost:8083
 
