add ruta swagger docker

--- a/HotelYRestaurantes/reportes.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/reportes.microservice/src/main/resources/application.properties
@@ -18,5 +18,5 @@ org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,\
 org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 # (ya que estabas) desactiva lo de compose si no lo usar\u00e1s aqu\u00ed:
-spring.docker.compose.enabled=false
+#spring.docker.compose.enabled=false
 
