--- a/HotelYRestaurantes/docker-compose.yml
+++ b/HotelYRestaurantes/docker-compose.yml
@@ -113,6 +113,8 @@ services:
         SPRING_JPA_HIBERNATE_DDL_AUTO: update
         MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info
         MANAGEMENT_ENDPOINT_HEALTH_PROBES_ENABLED: "true"
+        SPRINGDOC_SWAGGER_UI_URL: /api/user/v3/api-docs
+        SPRINGDOC_SWAGGER_UI_CONFIG_URL: /api/user/v3/api-docs/swagger-config
         SERVER_PORT: 8080
       ports:
         - "${USER_APP_PORT:-8085}:8080"
@@ -232,8 +234,8 @@ services:
       MANAGEMENT_ENDPOINT_HEALTH_PROBES_ENABLED: "true"
 
       # Swagger (ajusta si tu path cambia)
-      SPRINGDOC_SWAGGER_UI_URL: /api/rest/v3/api-docs
-      SPRINGDOC_SWAGGER_UI_CONFIG_URL: /api/rest/v3/api-docs/swagger-config
+      SPRINGDOC_SWAGGER_UI_URL: /api/reportes/v3/api-docs
+      SPRINGDOC_SWAGGER_UI_CONFIG_URL: /api/reportes/v3/api-docs/swagger-config
 
       # Puerto interno del contenedor (mantén 8080 si así corre tu app)
       SERVER_PORT: 8080
