--- a/HotelYRestaurantes/reviews.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/reviews.microservice/src/main/resources/application.properties
@@ -19,6 +19,9 @@ server.error.include-stacktrace=never
 #logging.level.org.springframework.security=DEBUG
 
 logging.level.org.springframework.web.reactive.function.client=DEBUG
-hotel.api.base-url=http://localhost:8082
-restaurante.api.base-url=http://localhost:8083
+# application.properties de reviews
+hotel.api.base-url=${HOTEL_API_BASE_URL:http://hotel-app:8080}
+restaurante.api.base-url=${RESTAURANTE_API_BASE_URL:http://restaurante-app:8080}
+#hotel.api.base-url=http://localhost:8082
+#restaurante.api.base-url=http://localhost:8083
 
