--- a/HotelYRestaurantes/reportes.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/reportes.microservice/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8086
 #hotel.api.base-url=http://localhost:8082
 #rest.api.base-url=http://localhost:8083
 hotel.api.base-url=${HOTEL_API_BASE_URL:http://hotel-app:8080}
-restaurante.api.base-url=${RESTAURANTE_API_BASE_URL:http://restaurante-app:8080}
+rest.api.base-url=${RESTAURANTE_API_BASE_URL:http://restaurante-app:8080}
 
 #spring.docker.compose.enabled=
 
