--- a/HotelYRestaurantes/reportes.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/reportes.microservice/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8086
 #rest.api.base-url=http://localhost:8083
 hotel.api.base-url=${HOTEL_API_BASE_URL:http://hotel-app:8080}
 rest.api.base-url=${RESTAURANTE_API_BASE_URL:http://restaurante-app:8080}
-
+#rest.api.base-url=http://localhost:8083
 #spring.docker.compose.enabled=
 
 springdoc.api-docs.enabled=true
@@ -20,5 +20,5 @@ org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,\
 org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 # (ya que estabas) desactiva lo de compose si no lo usar\u00e1s aqu\u00ed:
-spring.docker.compose.enabled=false
+#spring.docker.compose.enabled=false
 
