cors corregidos ap

--- a/HotelYRestaurantes/reviews.microservice/src/main/resources/application.properties
+++ b/HotelYRestaurantes/reviews.microservice/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=reviews
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-spring.docker.compose.enabled=false
+#spring.docker.compose.enabled=false
 
 # --- Swagger / OpenAPI ---
 springdoc.api-docs.path=/v3/api-docs
